<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/countryCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/purple_200"
    app:cardCornerRadius="@dimen/dimen_12"
    app:cardElevation="@dimen/dimen_6"
    android:layout_marginBottom="@dimen/dimen_16">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/countryFlagImageView"
            android:layout_width="@dimen/width_flag"
            android:layout_height="@dimen/height_flag"
            android:layout_margin="@dimen/dimen_18"
            android:elevation="@dimen/dimen_6"
            android:src="@drawable/ic_flag_example_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginVertical="@dimen/dimen_20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/countryFlagImageView"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/country_card_titles_style"
                android:text="@string/country_item_country_title" />

            <TextView
                android:id="@+id/countryNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/country_card_values_style"
                android:text="@string/country_item_country_example" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/country_card_titles_style"
                android:text="@string/country_item_capital_title" />

            <TextView
                android:id="@+id/countryCapitalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/country_card_values_style"
                android:text="@string/country_item_capital_example" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/country_card_titles_style"
                android:text="@string/country_item_region_title" />

            <TextView
                android:id="@+id/countryRegionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/country_card_values_style"
                android:text="@string/country_item_region_example" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>
